--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 
 <div class="section1"> 
-    <p>Waxaan ka daawan kartaa</p>
+    <p>Waxaan ka daawan karta</p>
 <p></p>
 <p>Muxaadaro</p>
 <p>Nashiido</p>
